# gnss-scintillation-risk-ml

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-offline.txt  requirements.txt
.github/workflows/: ci.yml
configs/: storm_may2024.json
docs/: architecture.md  roadmap_14_day.md
scripts/: plot_metrics_and_comparison.py  run_all_with_plots.sh  run_gpu_training.sh  run_pipeline.py  run_spark_dry_run.sh  submit_gdx_spark.sh
src/gnss_risk/: __init__.py  config.py  gpu_train.py  pipeline.py  spark_job.py  time_utils.py
src/gnss_risk/eval/: metrics.py
src/gnss_risk/ingest/: __init__.py  downloaders.py  synthetic.py
src/gnss_risk/labels/: __init__.py  vpl.py
src/gnss_risk/models/: __init__.py  forest_lite.py  logistic.py
src/gnss_risk/preprocess/: alignment.py
src/gnss_risk/report/: generate.py
tests/: test_pipeline_smoke.py
